# trash

./: .chpwd  .gitignore  Makefile  Makefile.conf  Makefile.conf.in  Makefile.in  config.h.in  configure  configure.in  notes
autom4te.cache/: output.0  requests  traces.0
m4/: ax_check_compile_flag.m4
src/: Application.cpp  Application.hpp  Options.cpp  Options.hpp  Trash.cpp  Trash.hpp  Trashcan.cpp  Trashcan.hpp  User.cpp  User.hpp  main.cpp
src/lib/: Trashcan.cpp  User.cpp  User.hpp  application.cpp  application.hpp  can.cpp  can.hpp  file.cpp  file.hpp  options.cpp  options.hpp  string.cpp  string.hpp  trashinfo.cpp  trashinfo.hpp  user.cpp  user.hpp
src/list/: Options.cpp  main.cpp
src/put/: Options.cpp  Options.hpp  Trash.cpp  Trash.hpp  header.hpp  main.cpp
src/restore/: Trash.hpp
